--- a/config.yaml
+++ b/config.yaml
@@ -1,11 +1,11 @@
 strategy:
-  divisions: 40            # 20 또는 40 선택
+  divisions: 40            # 20, 30, 40 선택 (20은 고위험)
   total_investment: 10000000  # 총 투자금 (원)
   target_profit_pct: 5.0     # 목표 수익률 %
   use_loc: true              # LOC 주문 사용 여부
   loc_discount_pct: 1.0      # LOC 할인율 %
 
-ticker: "TQQQ"
+ticker: "TQQQ"             # TQQQ (별%=15-1.5T) 또는 SOXL (별%=20-2T)
 broker: "kis"                # kis 또는 kiwoom
 
 backtest:
